First Github Pages Ready version

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="footer-columns">
                 <div class="footer-column">
-                    <h3>Sis' Place Inc.</h3>
+                    <h3 class="footer-title">Sis' Place Inc.</h3>
                 </div>
                 <div class="footer-column">
                     <h4>Serving</h4>
