--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <section class="hero">
-            <img src="assets\pinkies header cropped enhanced.jpg" alt="Support for all our sisters">
+            <img src="assets/pinkies header cropped enhanced.jpg" alt="Support for all our sisters">
             <div class="hero-text">
                 <h1>Sis' Place Inc.</h1>
                 <p>support for all our sisters</p>
@@ -81,7 +81,8 @@
             <div class="container">
                 <h2 class="section-title">contact us</h2>
                 <p>Navigating something tough? Want to learn more about Sis' Place or get involved? Reach out - we're here.</p>
-                <form>
+                <form action="https://formsubmit.co/aleisewoodford@sisplace.org" method="POST">
+                    <input type="hidden" name="_next" value="thanks.html">
                     <div class="form-group">
                         <label for="first-name">Name (required)</label>
                         <div class="form-row">
@@ -113,7 +114,7 @@
         <div class="container">
             <div class="footer-columns">
                 <div class="footer-column">
-                    <h3>Sis' Place Inc.</h3>
+                    <h3 class="footer-title">Sis' Place Inc.</h3>
                 </div>
                 <div class="footer-column">
                     <h4>Serving</h4>
