--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
             <a href="index.html" class="logo">Sis' Place</a>
             <nav>
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -132,7 +130,7 @@
                 </div>
                 <div class="footer-column">
                     <h4>Contact</h4>
-                    <p>aleisewoodford@sisplace.org</p>
+                    <p>aletheiawoodford@sisplace.org</p>
                     <p>(413) 206-6316</p>
                 </div>
             </div>
